fix - envelope was covering slide 6

--- a/src/components/ContactForm/contact-form.css
+++ b/src/components/ContactForm/contact-form.css
@@ -11,6 +11,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    max-height: 70%;
 }
 
 .contact_section_heading_container {
